Modular data preprocessing

--- a/model/naive_bayes.ipynb
+++ b/model/naive_bayes.ipynb
@@ -1,14 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# IMPORTS"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import pandas as pd, numpy as np\n",
+    "import sklearn\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
@@ -16,71 +24,90 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TRAIN-TEST SPLIT + PROCESSING"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.0% of 100.0% processed\n",
-      "20.0% of 100.0% processed\n",
-      "30.0% of 100.0% processed\n",
-      "40.0% of 100.0% processed\n",
-      "50.0% of 100.0% processed\n",
-      "60.0% of 100.0% processed\n",
-      "70.0% of 100.0% processed\n",
-      "80.0% of 100.0% processed\n",
-      "90.0% of 100.0% processed\n",
-      "100.0% of 100.0% processed\n",
+      "6.26680286518227% of 100.0% processed\n",
+      "12.53360573036454% of 100.0% processed\n",
+      "18.80040859554681% of 100.0% processed\n",
+      "25.06721146072908% of 100.0% processed\n",
+      "31.33401432591135% of 100.0% processed\n",
+      "37.60081719109362% of 100.0% processed\n",
+      "43.86762005627589% of 100.0% processed\n",
+      "50.13442292145816% of 100.0% processed\n",
+      "56.40122578664043% of 100.0% processed\n",
+      "62.6680286518227% of 100.0% processed\n",
+      "68.93483151700497% of 100.0% processed\n",
+      "75.20163438218724% of 100.0% processed\n",
+      "81.46843724736951% of 100.0% processed\n",
+      "87.73524011255178% of 100.0% processed\n",
+      "94.00204297773405% of 100.0% processed\n",
       "Data processed!\n",
       "Starting to create bag of words...\n",
       "Bag of words created.\n",
-      "Vocabulary size:128467\n"
+      "Vocabulary size:168595\n"
      ]
     }
    ],
    "source": [
-    "data = pd.read_csv('data/train.csv')\n",
-    "labels=(train_data[\"toxic\"] | train_data[\"severe_toxic\"] | train_data[\"obscene\"] | train_data[\"threat\"] | train_data[\"insult\"] | train_data[\"identity_hate\"])\n",
+    "data = pd.read_csv('../data/train.csv')\n",
+    "labels=(data[\"toxic\"] | data[\"severe_toxic\"] | data[\"obscene\"] | data[\"threat\"] | data[\"insult\"] | data[\"identity_hate\"])\n",
     "\n",
     "train_data = data[0:100000]\n",
     "train_labels = labels[0:100000]\n",
-    "test_data = train_data[100001:]\n",
-    "test_labels = train_labels[100001:]\n",
+    "test_data = data[100001:]\n",
+    "test_labels = labels[100001:]\n",
     "\n",
     "### CLEANING DATA \n",
-    "clean_comments = remove_stop_words(train_data)\n",
+    "clean_comments = remove_stop_words(data)\n",
     "ret = make_feature_vec(clean_comments)\n",
     "\n",
-    "train_feature_vectors_sparse = ret['train_feature_vectors_sparse']\n",
+    "train_feature_vectors_sparse = ret['train_feature_vectors_sparse'][0:100000]\n",
+    "test_feature_vectors_sparse = ret['train_feature_vectors_sparse'][100001:]\n",
     "vocab = ret['vocab']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(100000, 128467)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of train vec: (100000, 168595)\n",
+      "Shape of test vec: (59570, 168595)\n"
+     ]
     }
    ],
    "source": [
-    "train_feature_vectors_sparse.shape\n"
+    "print(\"Shape of train vec:\", train_feature_vectors_sparse.shape)\n",
+    "print(\"Shape of test vec:\", test_feature_vectors_sparse.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TRAINING NB CLASSIFIER"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +116,7 @@
        "ComplementNB(alpha=1.0, class_prior=None, fit_prior=True, norm=False)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,236 +131,142 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TEST DATA PROCESSING"
+    "###### TEST DATA PROCESSING"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>comment_text</th>\n",
-       "      <th>toxic</th>\n",
-       "      <th>severe_toxic</th>\n",
-       "      <th>obscene</th>\n",
-       "      <th>threat</th>\n",
-       "      <th>insult</th>\n",
-       "      <th>identity_hate</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>100001</th>\n",
-       "      <td>17359f940f219872</td>\n",
-       "      <td>\"\\n\\n Nice tavern article \\n\\nArticles like th...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100002</th>\n",
-       "      <td>173693e634e1a6cf</td>\n",
-       "      <td>MfD nomination of User:Wikitrevor/Sandbox\\n. Y...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100003</th>\n",
-       "      <td>17375e3fff2d9d1a</td>\n",
-       "      <td>I am not speaking of sales. I am speaking of p...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100004</th>\n",
-       "      <td>173a0ca6d52dd01d</td>\n",
-       "      <td>\"\\nG.S.K. Lee, what I intended to say is that ...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100005</th>\n",
-       "      <td>173a573b6011f226</td>\n",
-       "      <td>querie \\nOur town near Bronkhorstspruit recent...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      id                                       comment_text  \\\n",
-       "100001  17359f940f219872  \"\\n\\n Nice tavern article \\n\\nArticles like th...   \n",
-       "100002  173693e634e1a6cf  MfD nomination of User:Wikitrevor/Sandbox\\n. Y...   \n",
-       "100003  17375e3fff2d9d1a  I am not speaking of sales. I am speaking of p...   \n",
-       "100004  173a0ca6d52dd01d  \"\\nG.S.K. Lee, what I intended to say is that ...   \n",
-       "100005  173a573b6011f226  querie \\nOur town near Bronkhorstspruit recent...   \n",
-       "\n",
-       "        toxic  severe_toxic  obscene  threat  insult  identity_hate  \n",
-       "100001      0             0        0       0       0              0  \n",
-       "100002      0             0        0       0       0              0  \n",
-       "100003      0             0        0       0       0              0  \n",
-       "100004      0             0        0       0       0              0  \n",
-       "100005      0             0        0       0       0              0  "
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_data = pd.read_csv('data/train.csv')\n",
-    "test_data.head()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16.785294611381566% of 100.0% processed\n",
-      "33.572267920094006% of 100.0% processed\n",
-      "50.35924122880645% of 100.0% processed\n",
-      "67.14621453751889% of 100.0% processed\n",
-      "83.93318784623132% of 100.0% processed\n",
-      "Data processed!\n"
-     ]
-    }
-   ],
-   "source": [
-    "#making a list of all test comments after cleaning\n",
-    "\n",
-    "num_test_comments = test_data[\"comment_text\"].size\n",
-    "clean_test_comments = []\n",
-    "\n",
-    "for i in range(100001,100001+num_test_comments):\n",
-    "    clean_comment = clean_data(test_data[\"comment_text\"][i])\n",
-    "    clean_test_comments.append(clean_comment)\n",
-    "    \n",
-    "    if((i+1)%10000==0):\n",
-    "        print(\"{}% of {}% processed\".format((i-100001+1)*100/(num_test_comments),num_test_comments*100/num_test_comments))\n",
-    "        \n",
-    "print(\"Data processed!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting to create bag of words...\n",
-      "Bag of words created.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# creating sparse representation of test feature vectors\n",
-    "vocab_mapping=set(zip([i for i in range (0,len(vocab))],vocab))\n",
-    "print(\"Starting to create bag of words...\")\n",
-    "vectorizer_test = CountVectorizer(analyzer=\"word\", tokenizer=None, preprocessor=None, vocabulary=vocab_mapping)\n",
-    "test_feature_vectors_sparse = vectorizer_test.fit_transform(clean_test_comments)\n",
-    "test_feature_vectors_full = test_feature_vectors_sparse.toarray()\n",
-    "\n",
-    "print(\"Bag of words created.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "##### STRAY BLOCK FOR LATER USAGE #####\n",
+    "\n",
+    "# # creating sparse representation of test feature vectors\n",
+    "# vocab_mapping=set(zip([i for i in range (0,len(vocab))],vocab))\n",
+    "# print(\"Starting to create bag of words...\")\n",
+    "# vectorizer_test = CountVectorizer(analyzer=\"word\", tokenizer=None, preprocessor=None, vocabulary=vocab_mapping)\n",
+    "# test_feature_vectors_sparse = vectorizer_test.fit_transform(clean_test_comments)\n",
+    "# test_feature_vectors_full = test_feature_vectors_sparse.toarray()\n",
+    "\n",
+    "# print(\"Bag of words created.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PREDICTION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.101292596945\n",
+      "0.10191\n"
+     ]
+    }
+   ],
    "source": [
     "predictions = clf.predict(test_feature_vectors_sparse)\n",
     "\n",
-    "# test_feature_vectors_sparse.shape"
+    "print(sum(test_labels)/len(test_labels))\n",
+    "print(sum(train_labels)/len(train_labels))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PERFORMANCE METRICS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# test_labels[\"toxic\"]\n",
-    "test_labels=(test_data[\"toxic\"] | test_data[\"severe_toxic\"] | test_data[\"obscene\"] | test_data[\"threat\"] | test_data[\"insult\"] | test_data[\"identity_hate\"])\n",
-    "\n"
+    "confmat = sklearn.metrics.confusion_matrix(test_labels, predictions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision =  0.712462711303\n",
+      "Recall =  0.588904109589\n",
+      "F_score =  0.644817759112\n",
+      "CCR =  0.92049689441\n"
+     ]
+    }
+   ],
+   "source": [
+    "precision = confmat[1,1]/(confmat[1,1] + confmat[1,0])\n",
+    "recall = confmat[1,1]/(confmat[1,1] + confmat[0,1])\n",
+    "fScore = (2*precision*recall)/(recall+precision)\n",
+    "ccr = (confmat[0,0] + confmat[1,1])/(sum(sum(confmat)))\n",
+    "\n",
+    "print(\"Precision = \",precision)\n",
+    "print(\"Recall = \",recall)\n",
+    "print(\"F_score = \",fScore)\n",
+    "print(\"CCR = \",ccr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[53536,     0],\n",
-       "       [ 6034,     0]])"
+       "array([[50535,  3001],\n",
+       "       [ 1735,  4299]])"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import sklearn\n",
-    "sklearn.metrics.confusion_matrix(test_labels, predictions)"
+    "confmat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "168595"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(vocab)"
    ]
   },
   {
