Updated preprocessing file. Use file from model directory.

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -36,23 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(159571, 8)\n"
-     ]
-    }
-   ],
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "train_data = pd.read_csv('data/train.csv')\n",
+    "# train_data = pd.read_csv('data/train.csv')\n",
     "\n",
-    "print(train_data.shape)\n",
+    "# print(train_data.shape)\n",
     "\n",
-    "train_labels = (train_data[\"toxic\"] | train_data[\"severe_toxic\"] | train_data[\"obscene\"] | train_data[\"threat\"] | train_data[\"insult\"] | train_data[\"identity_hate\"])\n",
+    "# train_labels = (train_data[\"toxic\"] | train_data[\"severe_toxic\"] | train_data[\"obscene\"] | train_data[\"threat\"] | train_data[\"insult\"] | train_data[\"identity_hate\"])\n",
     "\n",
     "#sum(train_labels)/len(train_labels)\n",
     "#sum(train_data[\"toxic\"])/len(train_labels)"
@@ -67,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -96,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -109,7 +103,7 @@
     "    num_comments = train_data[\"comment_text\"].size\n",
     "    clean_comments = []\n",
     "\n",
-    "    for k in train_data[\"comment_text\"]:\n",
+    "    for i,k in enumerate(train_data[\"comment_text\"]):\n",
     "        clean_comment = clean_data(k)\n",
     "        clean_comments.append(clean_comment)\n",
     "\n",
@@ -130,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -155,22 +149,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "6.26680286518227% of 100.0% processed\n",
+      "12.53360573036454% of 100.0% processed\n",
+      "18.80040859554681% of 100.0% processed\n",
+      "25.06721146072908% of 100.0% processed\n",
+      "31.33401432591135% of 100.0% processed\n",
+      "37.60081719109362% of 100.0% processed\n",
+      "43.86762005627589% of 100.0% processed\n",
+      "50.13442292145816% of 100.0% processed\n",
+      "56.40122578664043% of 100.0% processed\n",
+      "62.6680286518227% of 100.0% processed\n",
+      "68.93483151700497% of 100.0% processed\n",
+      "75.20163438218724% of 100.0% processed\n",
+      "81.46843724736951% of 100.0% processed\n",
+      "87.73524011255178% of 100.0% processed\n",
+      "94.00204297773405% of 100.0% processed\n",
       "Data processed!\n",
       "Starting to create bag of words...\n",
       "Bag of words created.\n",
-      "Vocabulary size:13363\n"
+      "Vocabulary size:168595\n"
      ]
     }
    ],
    "source": [
-    "# clean_comments = remove_stop_words(train_data[20:2000])\n",
+    "# clean_comments = remove_stop_words(train_data)\n",
     "# ret=make_feature_vec(clean_comments)"
    ]
   },
