Storing processed data in /data/Processed

--- a/model/Data_Preprocessing.ipynb
+++ b/model/Data_Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,6 +14,7 @@
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "import scipy.sparse\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
@@ -36,18 +37,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# train_data = pd.read_csv('data/train.csv')\n",
-    "\n",
-    "# print(train_data.shape)\n",
-    "\n",
-    "# train_labels = (train_data[\"toxic\"] | train_data[\"severe_toxic\"] | train_data[\"obscene\"] | train_data[\"threat\"] | train_data[\"insult\"] | train_data[\"identity_hate\"])\n",
-    "\n",
     "#sum(train_labels)/len(train_labels)\n",
     "#sum(train_data[\"toxic\"])/len(train_labels)"
    ]
@@ -61,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -90,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -124,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -149,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -178,9 +171,30 @@
      ]
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
+    "### UNCOMMENT THIS BLOCK TO STORE PROCESSED DATA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train_data = pd.read_csv('../data/train.csv')\n",
+    "# train_labels = (train_data[\"toxic\"] | train_data[\"severe_toxic\"] | train_data[\"obscene\"] | train_data[\"threat\"] | train_data[\"insult\"] | train_data[\"identity_hate\"])\n",
     "# clean_comments = remove_stop_words(train_data)\n",
-    "# ret=make_feature_vec(clean_comments)"
+    "# ret=make_feature_vec(clean_comments)\n",
+    "\n",
+    "\n",
+    "# scipy.sparse.save_npz('../data/Processed/sparse_train_matrix.npz', ret['train_feature_vectors_sparse'])\n",
+    "# np.savetxt(\"../data/Processed/vocab.csv\", ret[\"vocab\"], delimiter=\",\", fmt='%s', header='vocab')\n",
+    "# np.savetxt(\"../data/Processed/labels.csv\", train_labels, delimiter=\",\", fmt='%s', header='labels')\n"
    ]
   },
   {
