--- a/model/naive_bayes.ipynb
+++ b/model/naive_bayes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -17,6 +17,7 @@
    "source": [
     "import pandas as pd, numpy as np\n",
     "import sklearn\n",
+    "import scipy.sparse\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
@@ -27,61 +28,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TRAIN-TEST SPLIT + PROCESSING"
+    "## UNCOMMENT TO PROCESS DATA FROM SCRATCH"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.26680286518227% of 100.0% processed\n",
-      "12.53360573036454% of 100.0% processed\n",
-      "18.80040859554681% of 100.0% processed\n",
-      "25.06721146072908% of 100.0% processed\n",
-      "31.33401432591135% of 100.0% processed\n",
-      "37.60081719109362% of 100.0% processed\n",
-      "43.86762005627589% of 100.0% processed\n",
-      "50.13442292145816% of 100.0% processed\n",
-      "56.40122578664043% of 100.0% processed\n",
-      "62.6680286518227% of 100.0% processed\n",
-      "68.93483151700497% of 100.0% processed\n",
-      "75.20163438218724% of 100.0% processed\n",
-      "81.46843724736951% of 100.0% processed\n",
-      "87.73524011255178% of 100.0% processed\n",
-      "94.00204297773405% of 100.0% processed\n",
-      "Data processed!\n",
-      "Starting to create bag of words...\n",
-      "Bag of words created.\n",
-      "Vocabulary size:168595\n"
-     ]
-    }
-   ],
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "data = pd.read_csv('../data/train.csv')\n",
-    "labels=(data[\"toxic\"] | data[\"severe_toxic\"] | data[\"obscene\"] | data[\"threat\"] | data[\"insult\"] | data[\"identity_hate\"])\n",
-    "\n",
-    "train_data = data[0:100000]\n",
-    "train_labels = labels[0:100000]\n",
-    "test_data = data[100001:]\n",
-    "test_labels = labels[100001:]\n",
+    "# data = pd.read_csv('../data/train.csv')\n",
+    "# labels=(data[\"toxic\"] | data[\"severe_toxic\"] | data[\"obscene\"] | data[\"threat\"] | data[\"insult\"] | data[\"identity_hate\"])\n",
+    "# train_data = data[0:100000]\n",
+    "# test_data = data[100001:]\n",
+    "# train_labels = labels[0:100000]\n",
+    "# test_labels = labels[100001:]\n",
     "\n",
     "### CLEANING DATA \n",
-    "clean_comments = remove_stop_words(data)\n",
-    "ret = make_feature_vec(clean_comments)\n",
+    "# clean_comments = remove_stop_words(data)\n",
+    "# ret = make_feature_vec(clean_comments)\n",
     "\n",
-    "train_feature_vectors_sparse = ret['train_feature_vectors_sparse'][0:100000]\n",
-    "test_feature_vectors_sparse = ret['train_feature_vectors_sparse'][100001:]\n",
-    "vocab = ret['vocab']"
+    "# vocab = ret['vocab']\n",
+    "# train_feature_vectors_sparse = ret['train_feature_vectors_sparse'][0:100000]\n",
+    "# test_feature_vectors_sparse = ret['train_feature_vectors_sparse'][100001:]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# USE ALREADY PROCESSED DATA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = pd.read_csv('../data/Processed/labels.csv')[\"# labels\"]\n",
+    "train_labels = labels[0:100000]\n",
+    "test_labels = labels[100001:]\n",
+    "\n",
+    "train_feature_vectors_sparse_load = scipy.sparse.load_npz('../data/Processed/sparse_train_matrix.npz')\n",
+    "\n",
+    "train_feature_vectors_sparse = train_feature_vectors_sparse_load[0:100000]\n",
+    "test_feature_vectors_sparse = train_feature_vectors_sparse_load[100001:]\n",
+    "vocab = pd.read_csv('../data/Processed/vocab.csv')[\"# vocab\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +117,7 @@
        "ComplementNB(alpha=1.0, class_prior=None, fit_prior=True, norm=False)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -202,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +241,7 @@
        "       [ 1735,  4299]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,35 +249,6 @@
    "source": [
     "confmat"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "168595"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(vocab)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
