Added unclean representations

--- a/model/Data_Preprocessing.ipynb
+++ b/model/Data_Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -99,7 +99,8 @@
     "    clean_comments = []\n",
     "\n",
     "    for i,k in enumerate(train_data[\"comment_text\"]):\n",
-    "        clean_comment = clean_data(k)\n",
+    "        #clean_comment = clean_data(k)\n",
+    "        clean_comment = k\n",
     "        clean_comments.append(clean_comment)\n",
     "\n",
     "        if((i+1)%10000==0):\n",
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +177,7 @@
       "Data processed!\n",
       "Starting to create bag of words...\n",
       "Bag of words created.\n",
-      "Vocabulary size:168595\n"
+      "Vocabulary size:189775\n"
      ]
     }
    ],
@@ -200,7 +201,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12053"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "######## checking the index of a word in the vocab\n",
+    "\n",
+    "\n",
+    "\n",
+    "# vectorizer.vocabulary_.get(u'background')\n",
+    "# train_feature_vectors_sparse.shape\n",
+    "# train_feature_vectors_sparse[1,12051]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
