--- a/model/naive_bayes.ipynb
+++ b/model/naive_bayes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -64,8 +64,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "labels = pd.read_csv('../data/Processed/labels.csv')[\"labels\"]\n",
@@ -81,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -189,33 +191,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# USING NORMAL BERNOULLI-NB, THE F-SCORE DECREASES"
+    "# USING NORMAL MULTINOMIAL-NB, THE F-SCORE DECREASES"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision =  0.401557838913\n",
-      "Recall =  0.838988919668\n",
-      "F_score =  0.543151759695\n",
-      "CCR =  0.931576296794\n",
+      "Precision =  0.619489559165\n",
+      "Recall =  0.762079510703\n",
+      "F_score =  0.683426272968\n",
+      "CCR =  0.941866711432\n",
       "\n",
       "Confusion Matrix: \n",
-      " [[53071   465]\n",
-      " [ 3611  2423]]\n"
+      " [[52369  1167]\n",
+      " [ 2296  3738]]\n"
      ]
     }
    ],
    "source": [
     "# TRAINING\n",
-    "from sklearn.naive_bayes import BernoulliNB\n",
-    "clf = BernoulliNB()\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "clf = MultinomialNB()\n",
     "clf.fit(train_feature_vectors_sparse, train_labels)\n",
     "\n",
     "# PREDICTION\n",
@@ -237,6 +239,74 @@
     "print(\"CCR = \",ccr)\n",
     "print()\n",
     "print(\"Confusion Matrix: \\n\", confmat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# TF-IDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(59570, 168595)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "tf_transformer = TfidfTransformer(use_idf=False).fit(train_feature_vectors_sparse)\n",
+    "X_train_tf = tf_transformer.transform(train_feature_vectors_sparse)\n",
+    "X_train_tf.shape\n",
+    "\n",
+    "tf_transformer = TfidfTransformer(use_idf=False).fit(test_feature_vectors_sparse)\n",
+    "X_test_tf = tf_transformer.transform(test_feature_vectors_sparse)\n",
+    "X_test_tf.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TRAINING\n",
+    "from sklearn.naive_bayes import ComplementNB\n",
+    "clf = ComplementNB()\n",
+    "clf.fit(X_train_tf, train_labels)\n",
+    "\n",
+    "# PREDICTION\n",
+    "predictions = clf.predict(X_test_tf)\n",
+    "\n",
+    "\n",
+    "# PERFORMANCE METRICS\n",
+    "\n",
+    "# confmat = sklearn.metrics.confusion_matrix(test_labels, predictions)\n",
+    "\n",
+    "# precision = confmat[1,1]/(confmat[1,1] + confmat[1,0])\n",
+    "# recall = confmat[1,1]/(confmat[1,1] + confmat[0,1])\n",
+    "# fScore = (2*precision*recall)/(recall+precision)\n",
+    "# ccr = (confmat[0,0] + confmat[1,1])/(sum(sum(confmat)))\n",
+    "\n",
+    "# print(\"Precision = \",precision)\n",
+    "# print(\"Recall = \",recall)\n",
+    "# print(\"F_score = \",fScore)\n",
+    "# print(\"CCR = \",ccr)\n",
+    "# print()\n",
+    "# print(\"Confusion Matrix: \\n\", confmat)"
    ]
   },
   {
